@@ -1,0 +1,12 @@
+#
+# Fri Jan 29 15:00:11 CST 2016
+#
+
+# Keyword: ...
+
+Today is the last day of this semester.
+How time flies baby! This semester I spent a lot of time applying schools, and
+I just did not have the mood to do research. But I still read a lot papers, and
+learned a lot about os and computer architecture.
+
+Anyway, be more patient, learn more.
